[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pyuseful"
version = "0.0.2"
authors = [
  { name="sikvelsigma", email="sikvelsigma@yandex.ru" },
]
description = "A collection of useful tools"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sikvelsigma/pytools-utils"
"Bug Tracker" = "https://github.com/sikvelsigma/pytools-utils/issues"